# woodpecker

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  appveyor.yml
benches/: benches.rs
examples/: basic.rs  tee.rs
scripts/: build-kcov  coverage
src/: config.rs  global.rs  helpers.rs  levels.rs  lib.rs  line_range.rs  logger.rs  parser.rs  record.rs  spec.rs
src/formatters/: default.rs  mod.rs
src/handlers/: file.rs  mod.rs  rotating_file.rs  stderr.rs  stdout.rs
src/macros/: control.rs  helpers.rs  init.rs  logging.rs  misc.rs  mod.rs
src/record/: imp.rs  mod.rs  record.rs
