[package]
name = "woodpecker"
version = "0.4.0"
authors = ["Dmytro Milinevskyi <dmilinevskyi@gmail.com>"]
description = "Fast and extensible logging for Rust"
keywords = ["log", "logging", "fast", "extensible"]
categories = ["development-tools::debugging"]
license = "Apache-2.0"
documentation = "https://docs.rs/woodpecker"
homepage = "https://github.com/niamster/woodpecker"
repository = "https://github.com/niamster/woodpecker"
readme = "README.md"
exclude = [
    "tests/examples"
]

[features]
default = []
test-thread-log = []

[[bench]]
name = "benches"
harness = false

[dependencies]
time = "^0.1.36"
chrono = "0.3"
parking_lot = "0.4"
crossbeam = "0.2"
lazy_static = "0.2"
thread-id = "3.0.0"
serde_json = "1.0.2"

[dev-dependencies]
bencher = "0.1"
tempdir = "0.3.5"
